--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Mood & Migraine Tracker</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
+    <h3>Mood Trend</h3>
+<canvas id="moodChart" width="400" height="200"></canvas>
     body {
       font-family: Arial, sans-serif;
       background: #f7f7f7;
